--- a/views/home.html
+++ b/views/home.html
@@ -9,15 +9,25 @@
             </div>
         </div>	
         <div class="container">
-            {{range .Topics}}
-            <div class="page-header">
-                <h1>{{.Title}}</h1>
-                <h6 class="text-muted">文章发表于 {{.Created}}</h6>
-                <p>
-                	{{.Content}}
-                </p>
+            <div class="col-md-9">
+                {{range .Topics}}
+                <div class="page-header">
+                    <h1>{{.Title}}</h1>
+                    <h6 class="text-muted">文章发表于 {{.Created}}</h6>
+                    <p>
+                        {{.Content}}
+                    </p>
+                </div>
+                {{end}}
             </div>
-            {{end}}
+            <div class="col-md-3">
+                <h3>文章分类</h3>
+                <ul>
+                    {{range .Categories}}
+                    <li><a href="/?cate={{.Title}}">{{.Title}}</a></li>
+                    {{end}}
+                </ul>
+            </div>
         </div>
 
         <script type="text/javascript" src="http://cdn.staticfile.org/jquery/2.0.3/jquery.min.js"></script>
